--- a/corp/rih/frontend/index.css
+++ b/corp/rih/frontend/index.css
@@ -1,62 +1,248 @@
-.b-section-divider {
-    width: 100%;
-    height: 3rem;
-    background-color: rgba(0, 0, 0, .1);
-    border: solid rgba(0, 0, 0, .15);
-    border-width: 1px 0;
-    box-shadow: inset 0 .5em 1.5em rgba(0, 0, 0, .1), inset 0 .125em .5em rgba(0, 0, 0, .15);
+@font-face {
+    font-family: 'IdealistSans';
+    src: url('fonts/IdealistSans.eot');
+    src: url('fonts/IdealistSans.eot') format('embedded-opentype'),
+		url('fonts/IdealistSans.woff2') format('woff2'),
+		url('fonts/IdealistSans.woff') format('woff'),
+		url('fonts/IdealistSans.ttf') format('truetype'),
+		url('fonts/IdealistSans.svg') format('svg');
+}
+@font-face {
+    font-family: 'futurabookc';
+    src: url('fonts/futurabookc.eot');
+    src: url('fonts/futurabookc.eot') format('embedded-opentype'),
+		url('fonts/futurabookc.woff2') format('woff2'),
+		url('fonts/futurabookc.woff') format('woff'),
+		url('fonts/futurabookc.ttf') format('truetype'),
+		url('fonts/futurabookc.svg') format('svg');
+}
+body{
+	font-size: 16px;
+	color: #000000;
+	font-family: futurabookc;
 }
 
 
-/* .btn-light, */
-/* .btn-light:hover, */
-/* .btn-light:focus { */
-/*   color: #333; */
-/*   text-shadow: none; /\* Prevent inheritance from `body` *\/ */
-/* } */
+.font-india{
+	font-family: IdealistSans !important;
+}
 
-/* body { */
-/*   text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5); */
-/*   box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5); */
-/* } */
+.font-size-075{
+	font-size: 0.75rem!important;
+}
+.font-size-100{
+	font-size: 1rem!important;
+}
+.font-size-125{
+	font-size: 1.25rem!important;
+}
+.font-size-150{
+	font-size: 1.5rem!important;
+}
+.font-size-200{
+	font-size: 2rem!important;
+}
+.font-size-250{
+	font-size: 2.5rem!important;
+}
+.font-size-300{
+	font-size: 3rem!important;
+}
+.font-weight-bold{
+	font-weight: bold!important;
+}
+.font-weight-500{
+	font-weight: 500!important;
+}
+.font-weight-600{
+	font-weight: 600!important;
+}
+.font-weight-normal{
+	font-weight: normal!important;
+}
 
-/* .cover-container { */
-/*   max-width: 42em; */
-/* } */
+@media (min-width:576px){
+	.font-size-sm-075{
+		font-size: 0.75rem!important;
+	}
+	.font-size-sm-100{
+		font-size: 1rem!important;
+	}
+	.font-size-sm-125{
+		font-size: 1.25rem!important;
+	}
+	.font-size-sm-150{
+		font-size: 1.5rem!important;
+	}
+	.font-size-sm-200{
+		font-size: 2rem!important;
+	}
+	.font-size-sm-250{
+		font-size: 2.5rem!important;
+	}
+	.font-size-sm-300{
+		font-size: 3rem!important;
+	}
 
-/* .nav-masthead .nav-link { */
-/*   color: rgba(255, 255, 255, .5); */
-/*   border-bottom: .25rem solid transparent; */
-/* } */
+}
+@media (min-width:768px){
+	.font-size-md-100{
+		font-size: 1rem!important;
+	}
+	.font-size-md-125{
+		font-size: 1.25rem!important
+	}
+	.font-size-md-150{
+		font-size: 1.5rem!important;
+	}
+	.font-size-md-200{
+		font-size: 2rem!important;
+	}
+	.font-size-md-250{
+		font-size: 2.5rem!important;
+	}
+	.font-size-md-300{
+		font-size: 3rem!important;
+	}
 
-/* .nav-masthead .nav-link:hover, */
-/* .nav-masthead .nav-link:focus { */
-/*   border-bottom-color: rgba(255, 255, 255, .25); */
-/* } */
+}
 
-/* .nav-masthead .nav-link + .nav-link { */
-/*   margin-left: 1rem; */
-/* } */
+@media (min-width:992px){
+	.font-size-lg-100{
+		font-size: 1rem!important;
+	}
+	.font-size-lg-125{
+		font-size: 1.25rem!important
+	}
+	.font-size-lg-150{
+		font-size: 1.5rem!important;
+	}
+	.font-size-lg-200{
+		font-size: 2rem!important;
+	}
+	.font-size-lg-250{
+		font-size: 2.5rem!important;
+	}
+	.font-size-lg-300{
+		font-size: 3rem!important;
+	}
 
-/* .nav-masthead .active { */
-/*   color: #fff; */
-/*   border-bottom-color: #fff; */
-/* } */
+}
 
-/* body { */
-/*   font-family: Arial, sans-serif; */
-/*   line-height: 1.6; */
-/*   margin: 20px; */
-/*   color: #333; */
-/* } */
+img{
+	width:auto;
+	height: auto;
+	max-width: 100%;
+	max-height: 100%;
+	vertical-align: middle;
+}
 
-/* header { */
-/*   text-align: center; */
-/*   margin-bottom: 30px; */
-/* } */
+.text-white {
+    color: #ffffff !important;
+}
 
-/* h1 { */
-/*   color: #0039a6; */
-/* } */
+.text-red{
+	color:#E32D26 !important;
+}
+.text-grey1{
+	color:#81878d  !important;
+}
+.text-grey2{
+	color:rgba(88, 85, 85, 0.63)  !important;
+}
+.first_block{
+	background: #141F29 url(img/fon.png) left top no-repeat;
+	background-size: auto 100% ;
+	color:#ffffff;
+	padding-bottom: 200px;
+	overflow-x: hidden;
+}
 
-/* .intro */
+
+.second_block{
+	margin-top:-150px;
+	z-index: 10;
+    position: relative;
+}
+.second_block .container > div{
+	background: #ffffff;
+	border:10px solid  #141F29;
+	border-radius: 10px;
+}
+
+.footer{
+	background: #141F29;
+	color:#ffffff;
+}
+.footer a{
+	color:#ffffff;
+}
+
+@media  (max-width: 575.98px){
+	.hidden-xs{
+		display:none!important
+	}
+
+}
+@media (min-width:576px) and (max-width:767.98px){
+	.hidden-sm{
+		display:none!important
+	}
+}
+@media (min-width:768px) and (max-width:991.98px){
+	.hidden-md{
+		display:none!important
+	}
+}
+@media (min-width:992px) and (max-width:1199.98px){
+	.hidden-lg{
+		display:none!important
+	}
+}
+@media (min-width:1200px) and (max-width:1399.98px){
+	.hidden-xl{
+		display:none!important
+	}
+}
+@media (min-width:1400px){
+	.hidden-xxl{
+		display:none!important
+	}
+}
+
+
+@media (min-width:768px){
+	.first_block > div{
+		background: url(img/mat2.png) right top no-repeat;
+		margin-bottom: -200px;
+		padding-bottom: 40px;
+	}
+	.first_block .text-block{
+		height: 1100px;
+	}
+}
+@media (min-width:992px){
+	.first_block > div {
+		min-height: 820px;
+	}
+	.first_block .text-block{
+		height: 820px;
+	}
+}
+@media (min-width:1200px){
+	.first_block > div{
+		min-height: 950px;
+	}
+	.first_block .text-block{
+		height: 950px;
+	}
+}
+
+@media (min-width:1400px){
+	.first_block > div{
+		min-height: 1100px;
+	}
+	.first_block .text-block{
+		height: 1100px;
+	}
+}
